
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_15__ TYPE_4__ ;
typedef struct TYPE_14__ TYPE_3__ ;
typedef struct TYPE_13__ TYPE_2__ ;
typedef struct TYPE_12__ TYPE_1__ ;


typedef int ngx_msec_t ;
typedef scalar_t__ ngx_msec_int_t ;
typedef scalar_t__ ngx_int_t ;
struct TYPE_12__ {scalar_t__ lingering_close; scalar_t__ discard_body; scalar_t__ lingering_time; TYPE_4__* connection; } ;
typedef TYPE_1__ ngx_http_request_t ;
struct TYPE_13__ {int lingering_timeout; } ;
typedef TYPE_2__ ngx_http_core_loc_conf_t ;
struct TYPE_14__ {scalar_t__ timedout; } ;
typedef TYPE_3__ ngx_event_t ;
struct TYPE_15__ {int timedout; int error; TYPE_3__* read; } ;
typedef TYPE_4__ ngx_connection_t ;


 int NGX_DONE ;
 int NGX_ERROR ;
 scalar_t__ NGX_HTTP_SPECIAL_RESPONSE ;
 scalar_t__ NGX_OK ;
 int ngx_add_timer (TYPE_3__*,int) ;
 scalar_t__ ngx_handle_read_event (TYPE_3__*,int ) ;
 int ngx_http_core_module ;
 int ngx_http_finalize_request (TYPE_1__*,int ) ;
 TYPE_2__* ngx_http_get_module_loc_conf (TYPE_1__*,int ) ;
 scalar_t__ ngx_http_read_discarded_request_body (TYPE_1__*) ;
 scalar_t__ ngx_time () ;

void
ngx_http_discarded_request_body_handler(ngx_http_request_t *r)
{
    ngx_int_t rc;
    ngx_msec_t timer;
    ngx_event_t *rev;
    ngx_connection_t *c;
    ngx_http_core_loc_conf_t *clcf;

    c = r->connection;
    rev = c->read;

    if (rev->timedout) {
        c->timedout = 1;
        c->error = 1;
        ngx_http_finalize_request(r, NGX_ERROR);
        return;
    }

    if (r->lingering_time) {
        timer = (ngx_msec_t) r->lingering_time - (ngx_msec_t) ngx_time();

        if ((ngx_msec_int_t) timer <= 0) {
            r->discard_body = 0;
            r->lingering_close = 0;
            ngx_http_finalize_request(r, NGX_ERROR);
            return;
        }

    } else {
        timer = 0;
    }

    rc = ngx_http_read_discarded_request_body(r);

    if (rc == NGX_OK) {
        r->discard_body = 0;
        r->lingering_close = 0;
        ngx_http_finalize_request(r, NGX_DONE);
        return;
    }

    if (rc >= NGX_HTTP_SPECIAL_RESPONSE) {
        c->error = 1;
        ngx_http_finalize_request(r, NGX_ERROR);
        return;
    }



    if (ngx_handle_read_event(rev, 0) != NGX_OK) {
        c->error = 1;
        ngx_http_finalize_request(r, NGX_ERROR);
        return;
    }

    if (timer) {

        clcf = ngx_http_get_module_loc_conf(r, ngx_http_core_module);

        timer *= 1000;

        if (timer > clcf->lingering_timeout) {
            timer = clcf->lingering_timeout;
        }

        ngx_add_timer(rev, timer);
    }
}
